Thêm Glossary của MOST vào README

--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 Dịch tài liệu hướng dẫn UNIX/Linux từ trang http://www.ee.surrey.ac.uk/Teaching/Unix/index.html
+
+Trong quá trình dịch, tham khảo trang Glossary của dự án MOST để thống nhất thuật ngữ. http://du-an-most.hanoilug.org/MostWiki/Glossary
